fix: some alignment issues

--- a/book-club/qna.css
+++ b/book-club/qna.css
@@ -6,7 +6,7 @@
     gap: 2%;
 }
 
-.featuring div {
+.featuring .person {
     display: flex;
     flex-direction: column;
     align-content: center;
